--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.1",
+    "firebase": "^10.10.0",
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
