--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eco-millet-hub",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://eco-millets-hub.com/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -41,6 +42,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
